<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cars">

    <fragment
        android:id="@+id/navigation_cars"
        android:name="com.example.maintenancespace.ui.cars.CarFragment"
        android:label="@string/title_cars"
        tools:layout="@layout/fragment_car" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.maintenancespace.ui.events.EventFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.maintenancespace.ui.reports.ReportFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_gps"
        android:name="com.example.maintenancespace.ui.gps.GpsFragment"
        android:label="@string/title_gps"
        tools:layout="@layout/fragment_gps" />
</navigation>