<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_cars"
        android:icon="@drawable/directions_car_24dp"
        android:iconTint="#000000"
        android:title="@string/title_cars" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/event_24dp"
        android:iconTint="#000000"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/description_24dp"
        android:iconTint="#000000"
        android:title="@string/title_reports" />

    <item
        android:id="@+id/navigation_gps"
        android:icon="@android:drawable/ic_dialog_map"
        android:iconTint="#000000"
        android:title="GPS" />

</menu>