<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maintenanceEventListItem"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:visibility="visible">

    <Button
        android:id="@+id/eventButton"
        android:layout_width="60dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/EventDue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/eventButton"
        app:layout_constraintStart_toEndOf="@+id/EventNameDesc"
        app:layout_constraintTop_toTopOf="@+id/EventNameDesc">

        <TextView
            android:id="@+id/maintenanceEventDue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_event_due"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/maintenanceEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_event_date"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/maintenanceEventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_event_time"
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/EventNameDesc"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/maintenanceEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_event_name"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/maintenanceEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_event_description"
            android:textColor="#000000" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#7A7A7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>